<resources>
    <string name="app_name">Paciente Santa Fe</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">143531502852644</string>
    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="citas">Citas Medicas</string>
    <string name="historial">Historial Mediciones</string>
    <string name="perfil">Editar perfil</string>
    <string name="medicos">Medicos tratantes</string>
    <string name="consejos">Mis consejos</string>
    <string name="action_settings">Ayuda</string>
    <string name="MenuOpcion1">Información</string>
    <string name="centroMedico">Centro Medico</string>
    <string name="pronto">Más pronto</string>
    <string name="title_activity_menu_principal">menu_principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

</resources>
